--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,5 @@
-{lib_dirs, ["..","/mnt/glusterfs/apps/riak_bin"]}.
 {deps_dir, ["deps"]}.
 {deps,[
-    {mqs,        ".*",    {git, "git@github.com:synrc/white_rabbit.git", "master"}},
-    {store,      ".*",    {git, "git@github.com:synrc/store",            "master"}}
+    {mqs,     ".*",    {git, "git@github.com:synrc/mqs", "master"}},
+    {kvs,     ".*",    {git, "git@github.com:synrc/kvs", "master"}}
 ]}.
