--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {deps_dir, ["deps"]}.
 {deps,[
-    {n2o,     ".*",    {git, "git@github.com:5HT/n2o",   "master"}},
-    {mqs,     ".*",    {git, "git@github.com:synrc/mqs", "master"}},
-    {kvs,     ".*",    {git, "git@github.com:synrc/kvs", "master"}},
-    {shen,    ".*",    {git, "git@github.com:5HT/shen",  "master"}}
+    {n2o,     ".*",    {git, "git://github.com/5HT/n2o",   "master"}},
+    {mqs,     ".*",    {git, "git://github.com/synrc/mqs", "master"}},
+    {kvs,     ".*",    {git, "git://github.com/synrc/kvs", "master"}},
+    {shen,    ".*",    {git, "git://github.com/5HT/shen",  "master"}}
 ]}.
