--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,6 @@
 {deps,[
     {n2o,     ".*",    {git, "git://github.com/5HT/n2o",   "master"}},
 %    {mqs,     ".*",    {git, "git://github.com/synrc/mqs", "master"}},
-    {kvs,     ".*",    {git, "git://github.com/synrc/kvs", "master"}},
+    {kvs,     ".*",    {git, "git://github.com/spawnproc/kvs.social", "master"}},
     {shen,    ".*",    {git, "git://github.com/5HT/shen",  "master"}}
 ]}.
