--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 {deps_dir, ["deps"]}.
 {deps,[
-    {n2o,     ".*",    {git, "git://github.com/5HT/n2o",   "master"}},
-%    {mqs,     ".*",    {git, "git://github.com/synrc/mqs", "master"}},
-    {kvs,     ".*",    {git, "git://github.com/spawnproc/kvs.social", "master"}},
-    {shen,    ".*",    {git, "git://github.com/5HT/shen",  "master"}}
+    {n2o,    ".*", {git, "git://github.com/synrc/n2o",  {tag, "3.4"} }},
+    {nitro,  ".*", {git, "git://github.com/synrc/nitro",{tag, "1.4"} }},
+    {kvs,    ".*", {git, "git://github.com/synrc/kvs",  {tag, "3.4"} }},
+%   {mqs,    ".*", {git, "git://github.com/synrc/mqs",  "master"}},
+    {shen,   ".*", {git, "git://github.com/5HT/shen",   "master"}}
 ]}.
